--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="d-flex align-items-center">
                       <img
                         id="customerPhoto"
-                        src="https://via.placeholder.com/80x80/e2e8f0/64748b?text=?"
+                        src="https://placehold.co/80x80/e2e8f0/64748b?text=?"
                         alt="Customer"
                         class="customer-avatar me-3"
                       />
@@ -67,7 +67,7 @@
               <!-- Balance Display -->
               <div class="balance-display">
                 <h5 class="mb-2 opacity-75">Current Balance</h5>
-                <p id="currentBalance" class="balance-amount">$0.00</p>
+                <p id="currentBalance" class="balance-amount">₱0.00</p>
               </div>
 
               <!-- Transaction Form -->
@@ -142,6 +142,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/v7.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
